Fix tags on index that were not centered

--- a/app/assets/stylesheets/pages/_places_index.scss
+++ b/app/assets/stylesheets/pages/_places_index.scss
@@ -49,9 +49,8 @@
   }
 }
 
-
 .bar-search {
-  background: #03272F;
+  background: #03272f;
   height: 56px;
 }
 
@@ -86,4 +85,9 @@
   .place-tag {
     margin: 5px;
   }
+}
+
+.place-tag {
+  align-items: center;
+  display: flex;
 }
